--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,4 +1,8 @@
-<h1>Page de déconnexion</h1>
+{% extends "main/base.html" %}
 
-<h2>Vous avez été déconnecté.</h2>
-<p>Pour retourner à <a href="index.html">l'écran d'accueil</a>.</p>
+{% block content %}
+    <h1>Page de déconnexion</h1>
+
+    <h2>Vous avez été déconnecté.</h2>
+    <p>Pour retourner à <a href="index.html">l'écran d'accueil</a>.</p>
+{% endblock %}
