--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -18,7 +18,7 @@
 
     <body>
         <header>
-            Bienvenue sur le site de Pur Beurre. Gras = vie ;)
+            <h2>Bienvenue sur le site de Pur Beurre. Le (bon) gras, c'est la vie.</h2>
         </header>
         <nav>
             {% block nav %}
@@ -33,7 +33,7 @@
     </body>
 
     <footer id="footer">
-        &copy; Pur Beurre | Design Matthias GIL
+        &copy; Pur Beurre | Design by Matthias GIL
     </footer>
 
 </html>
