--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,6 +1,7 @@
-<h1>Page d'inscription</h1>
+{% extends "main/base.html" %}
 
-<h2>S'inscrire</h2>
-mettre le lien vers la view d'inscription + formulaire
-utiliser la vue générique pour récupérer le formulaire
-
+{% block content %}
+    <h2>S'inscrire</h2>
+    mettre le lien vers la view d'inscription + formulaire
+    utiliser la vue générique pour récupérer le formulaire
+{% endblock %}
