--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-    <h3>Page de connexion : <a href="{% url 'connexion' %}">Se connecter</a></h3>
-    <h3>S'enregistrer : <a href="{% url 'signup' %}">S'enregistrer</a></h3>
-    <h3>Se déconnecter : <a href="{% url 'deconnexion' %}">Se déconnecter</a></h3>
+    <h3>Page de connexion : <a href="{% url 'users:connexion' %}">Se connecter</a></h3>
+    <h3>S'enregistrer : <a href="{% url 'users:signup' %}">S'enregistrer</a></h3>
+    <h3>Se déconnecter : <a href="{% url 'users:deconnexion' %}">Se déconnecter</a></h3>
     <h3>Effectuer une recherche de produit :</h3>
 
 {% endblock %}
