--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -2,6 +2,20 @@
 
 {% block content %}
     <h2>S'inscrire</h2>
-    mettre le lien vers la view d'inscription + formulaire
-    utiliser la vue générique pour récupérer le formulaire
+    <form method="post">
+      {% csrf_token %}
+      {% for field in form %}
+        <p>
+          {{ field.label_tag }}<br>
+          {{ field }}
+          {% if field.help_text %}
+            <small style="color: grey">{{ field.help_text }}</small>
+          {% endif %}
+          {% for error in field.errors %}
+            <p style="color: red">{{ error }}</p>
+          {% endfor %}
+        </p>
+      {% endfor %}
+      <button type="submit">Sign up</button>
+    </form>
 {% endblock %}
