--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -16,6 +16,6 @@
           {% endfor %}
         </p>
       {% endfor %}
-      <button type="submit">Sign up</button>
+      <button type="submit">S'enregistrer</button>
     </form>
 {% endblock %}
