small changes in templates

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -6,5 +6,6 @@
     <h3>S'enregistrer : <a href="{% url 'users:signup' %}">S'enregistrer</a></h3>
     <h3>Se déconnecter : <a href="{% url 'users:deconnexion' %}">Se déconnecter</a></h3>
     <h3>Effectuer une recherche de produit :</h3>
+    <form id="form-search" action="" method="GET"> {{ form }}</form>
 
 {% endblock %}
