--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -14,6 +14,20 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
         --->
+        <link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
+           rel = "stylesheet">
+        <script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+        
+        <!-- Javascript -->
+        <script>
+           $(function() {
+              $( "#id_product_to_search" ).autocomplete({
+                 source: "/autocomplete/",
+                 minLength: 2
+              });
+           });
+        </script>
     </head>
 
     <body>
